<resources>
    <string name="app_name">NewTruckage</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_zip_codes">ZipCodesActivity</string>

    <string name="state_name">UF</string>
    <string name="city_name">Cidade</string>
    <string name="origin">Origem</string>
    <string name="destiny">Destino</string>
    <string name="calculate">Calcular</string>
    <string name="zip">CEP</string>
    <string name="choose_zip">Escolha o CEP</string>
    <string name="choose_state">Escolha o estado</string>
    <string name="choose_city">Escolha a cidade</string>
    <string name="search">Buscar</string>
    <string name="truckage_value">Valor (R$)</string>
    <string name="truckage_weight">Peso (KG)</string>
</resources>
